--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^3.0.0",
+    "@colyseus/command": "^0.3.1",
     "@colyseus/monitor": "^0.15.8",
     "@colyseus/schema": "^2.0.36",
     "@colyseus/ws-transport": "^0.15.2",
