--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ yarn-debug.log*
 yarn-error.log*
 
 Front/public/game-assets/models/world.glb
+Front/public/game-assets/models/world-geometry-optimized.glb
