--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "contracts:deploy": "npm --prefix ./Contracts run deploy",
     "contracts:start": "npm --prefix ./Contracts run start",
     "contract-hooks:generate": "npm --prefix ./Contract-hooks run generate",
-    "optimize-model": "gltfpack -i Front/public/game-assets/models/world.glb -o Front/public/game-assets/models/world-optimized.glb -cc -kn -ke"
+    "optimize-model": "gltf-transform optimize Front/public/game-assets/models/world.glb Front/public/game-assets/models/world-geometry-optimized.glb",
+    "optimize-textures": "gltf-transform etc1s Front/public/game-assets/models/world-geometry-optimized.glb Front/public/game-assets/models/world-optimized.glb"
   },
   "eslintConfig": {
     "extends": [
@@ -71,6 +72,9 @@
     ]
   },
   "devDependencies": {
+    "@gltf-transform/cli": "^4.1.3",
+    "@gltf-transform/core": "^4.1.3",
+    "@gltf-transform/functions": "^4.1.3",
     "typescript": "^5.6.3"
   }
 }
