--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "three": "^0.169.0",
     "vite": "^5.4.10",
     "wagmi": "^2.12.29",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.5"
   },
   "scripts": {
     "dev": "vite",
