--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ node_modules
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,5 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-Front/public/game-assets/models/world.glb
+Front/dist/*
+# Front/public/game-assets/models/world.glb
 Front/public/game-assets/models/world-geometry-optimized.glb
