--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@gltf-transform/cli": "^4.1.3",
     "@gltf-transform/core": "^4.1.3",
     "@gltf-transform/functions": "^4.1.3",
+    "dotenv": "^16.5.0",
     "typescript": "^5.6.3"
   }
 }
