--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ VITE_SERVER_URL = http://127.0.0.1:2567
 
 
 FRONT_URL = http://127.0.0.1:3000
-MONGO_DB_URL = mongodb://localhost:27017/casino
+MONGO_DB_URI = mongodb://localhost:27017/casino
 JWT_SECRET = 
