fix lint errors

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^3.0.0",
+    "@chakra-ui/react": "^3.19.1",
     "@colyseus/command": "^0.3.1",
     "@colyseus/monitor": "^0.15.8",
     "@colyseus/schema": "^2.0.36",
@@ -54,7 +54,8 @@
     "optimize-model": "gltf-transform optimize Front/public/game-assets/models/world.glb Front/public/game-assets/models/world-geometry-optimized.glb",
     "optimize-textures-size": "gltf-transform resize Front/public/game-assets/models/world-geometry-optimized.glb Front/public/game-assets/models/world-geometry-optimized-size.glb --width 1024 --height 1024",
     "optimize-textures": "gltf-transform etc1s Front/public/game-assets/models/world.glb Front/public/game-assets/models/world-optimized.glb --quality 80 --effort 1 --no-mipmaps",
-    "lint": "eslint '**/*.{js,jsx,ts,tsx}'"
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "eslintConfig": {
     "extends": [
