--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ VITE_WEBSOCKET_URL = ws://127.0.0.1:2567
 FRONT_URL = http://127.0.0.1:3000
 MONGO_DB_URI = mongodb://localhost:27017/casino
 JWT_SECRET = 
+
+IS_PROD = true
+
+
+INFURA_API_KEY = 
+POLYGON_MUMBAI_PRIVATE_KEY = 
