--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@colyseus/schema": "^2.0.36",
     "@colyseus/ws-transport": "^0.15.2",
     "@emotion/react": "^11.13.3",
+    "@openzeppelin/contracts": "^5.3.0",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -51,6 +52,7 @@
     "preview": "vite preview",
     "server:dev": "node Server",
     "contracts:deploy": "npm --prefix ./Contracts run deploy",
+    "contracts:deploy:testnet": "npm --prefix ./Contracts run deploy:testnet",
     "contracts:start": "npm --prefix ./Contracts run start",
     "contract-hooks:generate": "npm --prefix ./Contract-hooks run generate",
     "optimize-model": "gltf-transform optimize Front/public/game-assets/models/world.glb Front/public/game-assets/models/world-geometry-optimized.glb",
