--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
+    "cannon": "^0.6.2",
     "colyseus": "^0.15.17",
     "colyseus.js": "^0.15.26",
     "cookie-parser": "^1.4.7",
